2005-05-26  Gary Thomas  <gary@mlbassoc.com>

	* tests/socket.c: Fix config test (CYGPKG_POSIX_SIGNALS)
	
	* tests/pselect.c: Fix config test (CYGPKG_POSIX_SIGNALS is
	only defined in <pkgconf/posix.h>)  Also, reduce number of
	iterations so test completes in a reasonable time (~30 seconds).

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/testfs.c: Fixed compiler warnigs for passing wrong types
	to diag_printf.
	* tests/fileio1.c: Ditto
	* tests/select.c: Ditto


2005-02-24  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/fileio.h: Only include kapi.h when
	CYGFUN_IO_FILEIO_SELECT is enabled and then define the select
	support structures.

2005-01-27  Yoshinori Sato  <ysato@users.sourceforge.jp>

	* src/io.cxx (ioctl): Change ioctl to use varargs so that it works
	on with h8300 who's compiler does not like doing it the other way.
	
2005-01-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/misc.cxx (cyg_fs_root_lookup): New function to find the mount
	point of a give filesystems root directory.
	* src/fio.h:
	* include/fileio.h: Made cyg_fs_{un}lock accessible outside of the 
	fileio package.

2004-01-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* 
2004-12-15  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/select.cxx (cyg_pselect): We need the oldmask under all
	conditions.

2004-12-01  Alex Paulis and Cameron Taylor  <ctaylor@waverider.com>

	* include/fileio.h: Changed si_thread to si_waitFlag
	* src/select.cxx: Improved efficiency: 1. Only threads waiting
	on a selector are woken up in selwake. This is done by swapping
	the condition variable for an event flag and registering threads
	for wakeup in selrecord. 2. No mutex is now required. 3. Search
	through the FD mask much streamlined.
 
2004-11-17  Jani Monoses <jani@iv.ro>

	* tests/socket.c: Allow building without kernel config.
	
2004-11-14  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/fileio1.c: Start the test using cyg_user_start so that
	it can be used without the kernel.	